--- a/index.html
+++ b/index.html
@@ -1,11 +1,70 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- ================= BASIC ================= -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Service Book</title>
+    <title>Service Book | Faculty & Staff Record Management – JCS</title>
+
+    <!-- ================= FAVICON / LOGO ================= -->
+    <!-- Place logo inside /public folder -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+
+    <!-- ================= SEO META ================= -->
+    <meta
+      name="description"
+      content="Service Book is a digital faculty and staff record management system developed by JCS. Securely manage service records, qualifications, experience, publications, and achievements."
+    />
+
+    <meta
+      name="keywords"
+      content="Service Book, Faculty Service Book, Staff Service Record, Academic Service Book, JCS, Jyothi Engineering College, HR Management System"
+    />
+
+    <meta name="author" content="JCS - Jeswin Consultancy Services" />
+
+    <!-- ================= OPEN GRAPH (GOOGLE / FACEBOOK) ================= -->
+    <meta property="og:title" content="Service Book | Developed by JCS" />
+    <meta
+      property="og:description"
+      content="A modern Service Book system to manage faculty and staff academic records, developed by JCS."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://servicebook.jeccac.in" />
+    <meta property="og:image" content="https://servicebook.jeccac.in/logo.png" />
+
+    <!-- ================= TWITTER ================= -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Service Book | Developed by JCS" />
+    <meta
+      name="twitter:description"
+      content="Digital Service Book system for academic institutions, developed by JCS."
+    />
+    <meta name="twitter:image" content="https://servicebook.jeccac.in/logo.png" />
+
+    <!-- ================= CANONICAL ================= -->
+    <link rel="canonical" href="https://servicebook.jeccac.in" />
+
+    <!-- ================= STRUCTURED DATA (LOGO FOR GOOGLE) ================= -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Service Book",
+        "operatingSystem": "Web",
+        "applicationCategory": "BusinessApplication",
+        "description": "Digital Service Book system for faculty and staff, developed by JCS.",
+        "author": {
+          "@type": "Organization",
+          "name": "JCS",
+          "url": "https://your-company-website.com"
+        },
+        "logo": "https://servicebook.jeccac.in/logo.png"
+      }
+    </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
